--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <li><a href="https://zoymilton.github.io/latinatvpe">LatinaTV 🇵🇪</a></li>
 <li><a href="https://zoymilton.github.io/atvpe">ATV 🇵🇪</a></li>
 <li><a href="https://zoymilton.github.io/americatvpe">AméricaTV 🇵🇪</a></li>
-<li><a href="https://zoymilton.github.io/films&arts">Films & Arts</a></li>
+<li><a href="https://zoymilton.github.io/filmsarts">Films & Arts</a></li>
 
 <!-- INFANTIL -->
 </div></div><div class="wp-block-pb-accordion-item c-accordion__item js-accordion-item no-js" data-initially-open="false" data-click-to-close="true" data-auto-close="true" data-scroll="false" data-scroll-offset="0"><h4 id="at-71972" class="c-accordion__title js-accordion-controller" role="button">‍🎬 Cine</h4><div id="ac-71972" class="c-accordion__content"><ul>
@@ -128,7 +128,7 @@
 <li><a href="https://zoymilton.github.io/discoveryturbo">Discovery Turbo</a></li>
 <li><a href="https://zoymilton.github.io/discoverytheater">Discovery Theater</a></li>
 <li><a href="https://zoymilton.github.io/hgtv">HGTV</a></li>
-<li><a href="https://zoymilton.github.io/H&H">Home And Health</a></li>
+<li><a href="https://zoymilton.github.io/hh">Home And Health</a></li>
 <li><a href="https://zoymilton.github.io/history">History</a></li>
 <li><a href="https://zoymilton.github.io/history2">History 2</a></li>
 <li><a href="https://zoymilton.github.io/tlc">TLC</a></li>
